correct spelling and grammar

--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,8 @@
         <div class="contact__item" id="contact__item-three">
           <h2>Or, use the following info to contact me at your discretion!</h2>
           <p>
-            Telphone # <a href="tel:206-496-4427">+1 206-496-4427</a><br>
-            <a>dg98211 (at) gmail (dot) com</a>
+            Telephone # <a href="tel:206-496-4427">+1 206-496-4427</a><br>
+            <a>dg98211 (at) Gmail (dot) com</a>
           </p>
         </div>
       </div>
