correct spelling and grammar

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <div class="profile__welcome">
             <h1>Hello World!</h1>
             <h3>My name is David Grimberg.</h3>
-            <h3>I am a Full Stack Web Developer who strives to build web applications for companies who contribute to the 
-                overall betterment of society, whether their services be in the realm of overall well-being, intellectual engagement, 
+            <h3>I am a Full Stack Web Developer who strives to build web applications for companies that contribute to the 
+                overall betterment of society, whether their services be in the realm of general well-being, intellectual engagement, 
                 or creative exploration.</h3>
           </div>
         </div>
@@ -85,18 +85,18 @@
               </table><br /><br />
               <h2>About Me</h2>
                 <p>
-                  Prior to late 2020 I worked in the accounts receivable department of a hospital in the Seattle-area for a decade and a half. Shortly 
-                  after that time I enrolled and completed a Full-Stack Web Development program through CareerFoundry. It was in this program 
+                  Before late 2020, I worked in the accounts receivable department of a hospital in the Seattle area for a decade and a half. Shortly 
+                  after, I enrolled and completed a Full-Stack Web Development program through CareerFoundry. It was in this program 
                   that I had the opportunity to solidify my knowledge of JavaScript and its most popular stacks, MERN (Mongo, Express, React, 
-                  Node) and MEAN (Mongo, Express, Angular, Node). During this time I not only did I had the opportunity to dive deep into these hard 
+                  Node) and MEAN (Mongo, Express, Angular, Node). During this time I not only had the opportunity to dive deep into these hard 
                   skills, but also to apply and refine some of my favorite soft skills- planning, research, creativity, problem-solving, communication, and project 
-                  management. My desire is to use everything that I learned over that time to deliver products that are top-notch!
+                  management. I desire to use everything that I learned over that time to deliver top-notch products!
                 </p>
               <h3>This is what I enjoy doing:</h3>
                 <ul>
                   <li>Front-end development</li>
                   <li>Back-end development</li>
-                  <li>Test driven development</li>
+                  <li>Test-driven development</li>
                   <li>Golfing</li>
                   <li>Watching movies and Mariners baseball</li>
                 </ul>
